# NLA_challenge

./: .gitignore  CMakeLists.txt  challenge1.cpp  log.txt  main.cpp  result.cpp  solver.cpp  vcpkg.json
ch1_result/: bicg_result.mtx  log.txt
ch2_result/: gram_matrix.mtx  log.txt
include/: utils.h
materials/: Lab1b_IntroEigen.md  Lab2_SolversEigen.md  Lab3_IterativeSolversLis.md  Lab4_IterSolPrecond.md  Lab6_RectangularSolvers.md  Lab6_RectangularSolvers_sol.md
src/: challenge1.cpp  challenge2.cpp  utils.cpp
